<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lynq</string>
    <string name="title_story">Story</string>
    <string name="title_post">Post</string>
    <string name="title_settings">Settings</string>
    <string name="who_there">Sign in to Lynq</string>
    <string name="login_desc">If you are new.</string>
    <string name="email">Start With Your Email</string>
    <string name="password">Keep it safe! Choose a strong password.</string>
    <string name="login">Start Connecting</string>
    <string name="not_registered">Don\'t Have an Account?</string>
    <string name="title_signup_page">Hello There</string>
    <string name="lynq_today">Lynq up with us today!</string>
    <string name="name">How should we call you?</string>
    <string name="signup">Get Identity</string>
    <string name="back_to_login">Back to Login</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="preview">Preview Image</string>
    <string name="upload">Upload Story</string>
    <string name="description_story">Description</string>
    <string name="empty_image_warning">Please insert an image file first.\n</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="faile_session">Failed to save session</string>
    <string name="welcome_traveler">Embrace your courage</string>
    <string name="open_gate">Step Inside</string>
    <string name="hallo">Hello %1$s</string>
    <string name="password_must_8">Password must be at least 8 characters long</string>
    <string name="lang">Language</string>
    <string name="create_account">Create Account</string>
    <string name="fill_the_colom">Fill The Form</string>
    <string name="haiName">Hai,👋 </string>
    <string name="story">Add Story</string>
    <string name="mode">Mode</string>
    <string name="yesterday">Yesterday</string>
    <string name="post_story">Post Story</string>
    <string name="hour_ago">%1$s hour ago</string>
    <string name="just_now">Just now</string>
    <string name="min_ago">%1$s min ago</string>

</resources>
