<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_story">

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.example.lynq.ui.story.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/navigation_post_story"
        android:name="com.example.lynq.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post_story" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.lynq.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>