<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.post.PostStoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mainAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary_color"
                android:elevation="4dp"
                app:navigationIcon="@drawable/move_left"
                app:title="@string/post_story"
                app:titleCentered="true"
                app:titleTextColor="@color/secondary_color" />
        </com.google.android.material.appbar.AppBarLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:contentDescription="@string/preview"
            android:src="@drawable/ic_place_holder" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:id="@+id/buttonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:backgroundTint="@color/secondary_color"
                android:id="@+id/galleryButton"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gallery"
                tools:ignore="ButtonStyle" />

            <Button
                android:backgroundTint="@color/secondary_color"
                android:id="@+id/cameraButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/camera"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_story"
            android:layout_marginTop="6dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollHorizontally="false"
                android:scrollbars="vertical"
                android:gravity="top"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:backgroundTint="@color/secondary_color"
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upload" />
    </LinearLayout>
</ScrollView>
